<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rizkianiktia.rizkianiktiasukoco_1202154339_modul1.SecondActivity">


    <TextView
        android:id="@+id/textViewmm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt2_makan_malam"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="46dp" />

    <TextView
        android:id="@+id/textViewrumahmakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewmm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewrumahmakan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/txt_menu"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textSize="25sp"
        android:text="@string/txt2_nasi_uduk" />

    <TextView
        android:id="@+id/textViewPorsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView12"
        android:layout_alignRight="@+id/textView12"
        android:layout_below="@+id/textViewMenu"
        android:layout_marginTop="20dp"
        android:text="@string/txt_porsi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewangka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPorsi"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="2" />

    <TextView
        android:id="@+id/textViewHRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewPorsi"
        android:layout_alignRight="@+id/textViewPorsi"
        android:layout_below="@+id/textViewangka"
        android:layout_marginTop="34dp"
        android:text="Harga"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHRG"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="" />

</RelativeLayout>
